# AES5-2018

./: .gitignore  CHANGELOG.md  CI-FAILURE-ANALYSIS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  package.json
.github/instructions/: copilot-instructions.md
.github/workflows/: ci-standards-compliance.yml
01-stakeholder-requirements/: stakeholder-requirements-spec.md
02-requirements/: system-requirements-specification.md
02-requirements/compliance/: compliance-test-framework-requirements.md
02-requirements/functional/: phase2-requirements-elicitation-deliverables-summary.md  requirements-elicitation-questionnaire.md  requirements-elicitation-session-STR-FUNC-001.md  requirements-elicitation-session-STR-FUNC-002.md  requirements-elicitation-session-STR-FUNC-003.md  requirements-elicitation-session-STR-QUAL-001.md  requirements-elicitation-session-notes-template.md  requirements-elicitation-tracking-matrix.md  requirements-synthesis-stakeholder-integration.md  stakeholder-interview-results-7-lane.md  system-requirements-specification.md
03-architecture/: architecture-quality-scenarios.md  architecture-specification.md
03-architecture/decisions/: ADR-001-layered-architecture-dependency-injection.md  ADR-002-static-memory-allocation-strategy.md  ADR-003-cpp17-implementation-c-api-bindings.md  ADR-004-cmake-build-system-platform-detection.md
03-architecture/views/logical/: ARC-C-001-frequency-validation-core.md  ARC-C-002-buffer-management.md  ARC-C-003-frequency-conversion.md  ARC-C-004-hardware-abstraction-layer.md  ARC-C-005-platform-adapters.md  ARC-C-006-compliance-test-framework.md  ARC-C-007-core-library-api.md  ARC-C-008-performance-monitoring.md  ARC-C-009-cross-platform-build.md  ARC-C-010-error-handling-reliability.md  ARC-C-011-documentation-examples.md
04-design/: phase-4-completion-summary.md
04-design/components/: aes5-core-library-design.md  hardware-abstraction-layer-design.md
04-design/data-models/: buffer-manager-data-model.md
04-design/interfaces/: hardware-abstraction-interfaces.md
04-design/testing/: test-driven-design-approach.md
05-implementation/: CMakeLists.txt  CMakeLists_simple.txt  benchmark_frequency_validator.cpp
05-implementation/benchmark/: rate_category_manager_benchmark.cpp
05-implementation/docs/: implementation-plan.md  phase-5-implementation-success-summary.md  project-structure-and-testing.md
05-implementation/src/lib/Standards/AES/AES5/2018/core/compliance/: compliance_engine.cpp  compliance_engine.hpp
05-implementation/src/lib/Standards/AES/AES5/2018/core/frequency_validation/: frequency_validator.cpp  frequency_validator.hpp
05-implementation/src/lib/Standards/AES/AES5/2018/core/rate_categories/: rate_category_manager.cpp  rate_category_manager.hpp
05-implementation/src/lib/Standards/AES/AES5/2018/core/validation/: validation_core.cpp  validation_core.hpp
05-implementation/tests/: test_aes5_2018_architecture.cpp  test_aes5_2018_constraints.cpp  test_aes5_2018_interfaces.cpp
05-implementation/tests/framework/: simple_test_framework.cpp  test_utilities.cpp
05-implementation/tests/unit/Standards/AES/AES5/2018/conformity/: README.md  test_aes5_2018_conformity.cpp
05-implementation/tests/unit/Standards/AES/AES5/2018/core/: test_compliance_engine.cpp  test_frequency_validator.cpp  test_rate_category_manager.cpp  test_validation_core.cpp
07-verification-validation/traceability/: functional-requirements-traceability-matrix.md
docs/: roadmap-milestone-tracking.md  traceability-status.md
examples/: advanced-usage.js  basic-usage.js
lib/: README.md
lib/Standards/AES/AES5/2018/core/frequency_validation/: primary_frequency_validator.h
lib/Standards/Common/interfaces/: audio_interface.h
reports/: orphans.md  traceability-matrix.md
scripts/generators/: spec_parser.py
spec-kit-templates/schemas/: architecture-spec.schema.json
src/: index.d.ts  index.js
standards-compliance/metrics/: quality-gates-metrics.md
test/: index.test.js
